<resources>
    <string name="app_name">Health Tracker</string>
    <string name="title_steps">Steps</string>
    <string name="title_pushups">Push ups</string>
    <string name="title_help">Health</string>
    <string name="title_sitting">Sitting</string>
    <string name="title_settings">Settings</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_bluetooth_selector">Paired Bluetooth Devices</string>
    <string name="btn_scan">Scan</string>
    <string name="toast_no_device">No device found</string>
    <string name="connected_to_device">Connected to</string>
    <string name="disconnected_from_device">is disconnected</string>
    <string name="connection_error">Connection error</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="continue_text">Continue</string>
    <string name="add_goal">Use goal</string>
    <string name="defaultCounterValue">100</string>
    <string name="weight">Weight</string>
    <string name="reset">Reset</string>
    <string name="sitting_minutes">Minutes for sitting:</string>
    <string name="status">Status:</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="sitting">sitting</string>
    <string name="standing">standing</string>
    <string name="height">Person\'s height in cm</string>
    <string name="enable_fall_detection">Enable fall detection</string>
    <string name="use_altitude_lock">Use altitude lock</string>
    <string name="emergency_contact_number">Emergency phone number</string>
    <string name="emergency_message">Emergency message</string>
    <string name="upper_limit">Upper limit in cm</string>
    <string name="lower_limit">Lower limit in cm</string>
    <string name="i_fell_message">I fell, please help!</string>
    <string name="emergency_message_sent">Emergency message sent</string>
    <string name="error_sms">Error during sending the emergency sms</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
